navigation bar updates

--- a/project-ideas.html
+++ b/project-ideas.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Four project ideas and a quiz for what project to do.">
   <meta name="author" content="Sara Dingmann">
   <meta name="keywords" content="Sara Dingmann, J4502, J7502"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Mukta:wght@400;700&display=swap" rel="stylesheet">
