--- a/project-ideas.html
+++ b/project-ideas.html
@@ -30,9 +30,9 @@
 
 <div class="projectheader">
   <img id="header" src="hat.JPG" alt="A green knitted hat." />
-  <img id="header"  src="cowl.JPG" alt="A multicolored knitted infinity scarf, or cowl." />
+  <img id="header" src="cowl.JPG" alt="A multicolored knitted infinity scarf, or cowl." />
   <img id="header" src="scarf.JPG" alt="A hot pink knitted scarf." />
-  <img id="header" src="slippers.png" alt="Two pairs of knitted slippers. One on the left brown and one on the right pink." />
+  <img id="header" src="slippers.JPG" alt="Two pairs of knitted slippers. One on the left brown and one on the right pink." />
 </div>
 
   <h2> Project Ideas </h2>
@@ -40,7 +40,7 @@
 
   <h2>Knitting Patterns</h2>
 
-  <section>
+  <section class="knitpattern">
     <div class="popup">
       <img src="scarf.JPG" alt="A hot pink knitted scarf." />
       <strong> Scarf </strong>
@@ -57,7 +57,7 @@
       <p>Once you have sewn up the entire hat, thread the needle through the long tail at the top of the piece. Then synch together the top. I gather the top by stitching in the circle directly in the middle, creating two circles with one stich separating them. Then bring in the furthers section of those circles and slowly gather the top like that. </p>
     </div>
     <div class="popup">
-      <img src="slippers.png" alt="Two pairs of knitted slippers. One on the left brown and one on the right pink." />
+      <img src="slippers.JPG" alt="Two pairs of knitted slippers. One on the left brown and one on the right pink." />
       <strong> Slippers </strong>
       <p> This pattern, from favecrafs, is slightly more complicated in that you will combine stiches and sewing up a piece.</p>
       <p>You will need two balls of medium weight yarn, as you will knit both strands together, working like you would if they were one piece of yarn. Fun tip: use two different colors of yarn to get an interesting combination. This will also require size 10 knitting needles. Since you are working with thicker yarn (the two pieces together) you will need to have larger stiches to keep normal stich size.</p>
