formatting for main pages

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 
   <section>
     <h2> Learn to Knit! </h2>
-    <p> Learn the basics of knitting. As the pandemic continues on, why not learn how to make items for yourself and for your family? Here you'll learn about the materials and techniques needed to make impressive, yet simple knitted projects. <p/>
+    <p class="body"> Learn the basics of knitting. As the pandemic continues on, why not learn how to make items for yourself and for your family? Here you'll learn about the materials and techniques needed to make impressive, yet simple knitted projects. <p/>
 
-    <p> Take our <a href="project-ideas.html">interactive quiz</a> to fin out which project you should do. Also stick around to learn about the history of knitting and how it differs from crocheting. <p/>
+    <p class="body"> Take our <a href="project-ideas.html">interactive quiz</a> to fin out which project you should do. Also stick around to learn about the history of knitting and how it differs from crocheting. <p/>
   </section>
 
   <img src="websitecoverphoto.jpg" alt="Eight stacked balls of yarn of multiple colors with a pair of knitting needles stuck in the center yarn ball." />
 
 
   <section class="popup">
-    <h2><a href="project-ideas.html">Knitting Patterns</a></h2>
+    <h2>Knitting Patterns</h2>
 
-    <img src="hat.JPG" alt="A green knitted hat."" />
+    <img src="hat.JPG" alt="A green knitted hat." />
 
-    <p> We have four knitting patterns that a great for beginingers and fun for experienced knitters. Click the header above them out and take our quiz. </p>
+    <p> We have four knitting patterns that a great for beginingers and fun for experienced knitters.</p>
 
   </section>
