--- a/knitting-basics.html
+++ b/knitting-basics.html
@@ -29,60 +29,81 @@
 
   <section >
     <h2> Knitting Basics </h2>
-    <p> There are a few aspects of knitting you will need to get acquainted with before you can pick up the needles and start knitting. First we’ll go over what materials you need and then teach you how to get started.</p>
+    <p class="body"> There are a few aspects of knitting you will need to get acquainted with before you can pick up the needles and start knitting. First we’ll go over what materials you need and then teach you how to get started.</p>
   </section>
 
   <section>
     <h2> Materials </h2>
-    <div class="popup">
+    <div class="materials-class">
+    <div class="popup-materials">
       <img src="needles.JPG" alt="Two pairs of knitting needles, the front ones are wooden and the back ones are a purple metal pair." />
       <strong> Knitting needles </strong>
       <p> Knitting needles come in many sizes and shapes. For beginners I suggest getting flat needles in size of 8, which works great for medium weight yarn. There are other needles such as double pointed needles and in-the-round needles, but for this site we will work with flat needles. </p>
     </div>
-    <div class="popup">
+    <div class="popup-materials">
       <img src="yarnneedles.JPG" alt="Four small yarn needles, like sewing needles, but dull and larger. There are four in the picture. " />
       <strong>Yarn needle</strong>
       <p>Yarn needles are large, dull needles that are used to stitch together your yarn creations and bind them off. They can also be used to decorate your knitted projects, however that is not something I will go over on this site. </p>
     </div>
-    <div class="popup">
+    <div class="popup-materials">
       <img src="circular.JPG" alt="A set of blue long circular needles in a coil." />
       <strong>Circular Needles</strong>
       <p>Circular needles are used to knit in the round, like we will use for knitting the cowl. Again, I would recommend getting a size 8 needle.  </p>
     </div>
+  </div>
   </section>
 
   <section>
     <h2>Knitting Techniques</h2>
+  <div class="how-to-img">
     <img class="how-to" src="caston1.JPG" alt="Knitting needled pulled to the center to from a triangle. " />
     <img class="how-to" src="caston2.JPG" alt="knitting needled pulled under yarn on thumb." />
     <img class="how-to" src="caston3.1.JPG" alt="Knitting needled pulled through the loop and stich formed on needle." />
+  </div>
     <strong> Casting On </strong>
-    <p>First, tie a slip knot on one of the needles. The yarn leading to the ball of yarn is you leading strand, and the other end is your tail. Hold the needle in your right hand and drop the leading strand of yarn over your left thumb and forefinger, the yarn leading to the needle over your forefinger. </p>
-    <p>Hold the yarn draped over your thumb and leading to the ball of yarn with pinky and ring finger. Pull the needle around you forefinger towards your palm, making a triangle with the yarn.</p>
-    <p> Then tuck the needle under the yarn pinned by your pinky and forefinger. Drop the yarn from your fingers and pull the yarn tight, you should have made a loop around your needle. </p>
-    <p>Repeat this until you have the desired number of stiches, not counting the slip knot ties at the beginning.  </p>
+    <p class="body">First, tie a slip knot on one of the needles. The yarn leading to the ball of yarn is you leading strand, and the other end is your tail. Hold the needle in your right hand and drop the leading strand of yarn over your left thumb and forefinger, the yarn leading to the needle over your forefinger. </p>
+    <p  class="body">Hold the yarn draped over your thumb and leading to the ball of yarn with pinky and ring finger. Pull the needle around you forefinger towards your palm, making a triangle with the yarn.</p>
+    <p class="body"> Then tuck the needle under the yarn pinned by your pinky and forefinger. Drop the yarn from your fingers and pull the yarn tight, you should have made a loop around your needle. </p>
+    <p class="body">Repeat this until you have the desired number of stiches, not counting the slip knot ties at the beginning.  </p>
 
+  <div class="how-to-img">
     <img class="how-to" src="knit1.JPG" alt="needled behind stich having entered up through the bottom." />
     <img class="how-to" src="knit4.JPG" alt="Right knitting needle has been pushed through the old stich with new stich still attached." />
     <img class="how-to" src="knit5.JPG" alt="Right needled pulled stitch off left and now has one stitch." />
-    <strong> Knit Stitch </strong>
-    <p>Hold the needle with the stiches in your left hand and hold your free needle in your right hand. Stick your right needle into the first stitch of your cast on row, inserting the needle from the bottom of the stich and up. Wrap the yarn counterclockwise around to the front of the free needle, not fully making a loop. </p>
-    <p>Then, slide the right needle down while holding the newly created stich on the needle. Turn the right needle sideways as you do and pull the new loop through the original stitch on the needle. Your right-hand needle will end-up in front of needle holding all the stiches in your left hand.</p>
-    <p> Next, pull the stich slipped through the new stich off the needle using your right-hand needle. Pull the leading yarn to tighten. </p>
-    <p>Then continue this pattern across all of your stiches on the left-hand needle, and when you get to the end, switch the needled and use the free needled now in your right hand to do this across the needle in your left hand. Use the images above to help guide you.</p>
+  </div>
 
+    <div>
+    <strong> Knit Stitch </strong>
+    <p class="body">Hold the needle with the stiches in your left hand and hold your free needle in your right hand. Stick your right needle into the first stitch of your cast on row, inserting the needle from the bottom of the stich and up. Wrap the yarn counterclockwise around to the front of the free needle, not fully making a loop. </p>
+    <p class="body">Then, slide the right needle down while holding the newly created stich on the needle. Turn the right needle sideways as you do and pull the new loop through the original stitch on the needle. Your right-hand needle will end-up in front of needle holding all the stiches in your left hand.</p>
+    <p class="body"> Next, pull the stich slipped through the new stich off the needle using your right-hand needle. Pull the leading yarn to tighten. </p>
+    <p class="body">Then continue this pattern across all of your stiches on the left-hand needle, and when you get to the end, switch the needled and use the free needled now in your right hand to do this across the needle in your left hand. Use the images above to help guide you.</p>
+    </div>
+
+    <div class="how-to-img">
     <img class="how-to" src="purl1.JPG" alt="Right needled has been put through stitch on left needle through the top of the stich and is in front. " />
     <img class="how-to" src="purl2.JPG" alt="Yarn has been wrapped around right needled counter clockwise. Right needled is on top of left needle." />
     <img class="how-to" src="purl3.JPG" alt="Right needle is pulling the new stitch through the old stitch on the left needle and is pulling the old stich of the left needle. " />
-    <strong> Purl Stitch</strong>
-    <p>Start as you would for the knit stich, but instead of having the leading strand yarn hang behind the needle, pull it to the front. Insert your needle through the first stitch from top to bottom, keeping the right-hand needle in front of the left. </p>
-    <p>Wrap the yarn around the needle counterclockwise starting from the top, this should again make half a loop around your right-hand needle. </p>
-    <p>Then bring the tip of the needle back through the original stich, keeping the new stich wrapped around the needle, this will pull it through the loop.</p>
-    <p> Next, pull the old stitch of the needle in your left hand using the right needle. Pull the leading strand to tighten and repeat. </p>
+    </div>
 
+    <div>
+    <strong> Purl Stitch</strong>
+    <p class="body">Start as you would for the knit stich, but instead of having the leading strand yarn hang behind the needle, pull it to the front. Insert your needle through the first stitch from top to bottom, keeping the right-hand needle in front of the left. </p>
+    <p  class="body">Wrap the yarn around the needle counterclockwise starting from the top, this should again make half a loop around your right-hand needle. </p>
+    <p class="body">Then bring the tip of the needle back through the original stich, keeping the new stich wrapped around the needle, this will pull it through the loop.</p>
+    <p class="body"> Next, pull the old stitch of the needle in your left hand using the right needle. Pull the leading strand to tighten and repeat. </p>
+    </div>
+
+    <div class="how-to-img">
     <img class="how-to" src="castoff2.JPG" alt="Left needle is going through the second stich on the right needle." />
     <img class="how-to" src="castoff3.JPG" alt="Left needle is through the second stich on the right needle." />
     <img class="how-to" src="castoff4.JPG" alt="Left needle has dropped the second stich over the first stich on the needle leaving only one stich left on the right needle." />
+    </div>
+
+    <div>
     <strong>Casting Off</strong>
-    <p>Knit two stitches using the knit stitch. After you have done that you will insert your left needled into the first stitch you made and pull it up and over the second stich you made and let it fall off your left needle. Your first stich will now be hanging around your second and you will only have one stich on your needle. </p>
-    <p>Now, knit another stitch from the left-hand needle. You will repeat the process of pulling the other stitch over the most recent one you knitted and letting it fall off the left-hand needle so it hangs off of the stitch on the right-hand needle. This will create a chain of loops and bind-off your piece. </p>
+    <p class="body">Knit two stitches using the knit stitch. After you have done that you will insert your left needled into the first stitch you made and pull it up and over the second stich you made and let it fall off your left needle. Your first stich will now be hanging around your second and you will only have one stich on your needle. </p>
+    <p class="body">Now, knit another stitch from the left-hand needle. You will repeat the process of pulling the other stitch over the most recent one you knitted and letting it fall off the left-hand needle so it hangs off of the stitch on the right-hand needle. This will create a chain of loops and bind-off your piece. </p>
+    </div>
+
+  </section>
