--- a/what-is-knitting.html
+++ b/what-is-knitting.html
@@ -31,16 +31,16 @@
 
   <strong>History of Knitting</strong>
 
-  <p> Knitting is the process of knotting one strand of yarn together to form a fabric. This was easier to do than other forms of creating fabric, such as weaving, because it required fewer and smaller tools. Knitting has been around for centuries, back as far as the 11th century. Many historians believe that knitting originated in the middle east. Knitting came to American with European colonization.  </p>
+  <p class="body"> Knitting is the process of knotting one strand of yarn together to form a fabric. This was easier to do than other forms of creating fabric, such as weaving, because it required fewer and smaller tools. Knitting has been around for centuries, back as far as the 11th century. Many historians believe that knitting originated in the middle east. Knitting came to American with European colonization.  </p>
 
-  <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+  <img class="history" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
 
-  <p> Knitting became mechanized in the 1500s in France during the Industrial Revolution. However, it wasn’t until the 1800s that knitting moved to factories after the invention of a steam powered knitting machine. This is when knitting became more of a hobby than a necessity. </p>
+  <p class="body"> Knitting became mechanized in the 1500s in France during the Industrial Revolution. However, it wasn’t until the 1800s that knitting moved to factories after the invention of a steam powered knitting machine. This is when knitting became more of a hobby than a necessity. </p>
 
   <strong>How is it differnet from crocheting? </strong>
 
-  <p> So, what is the difference between knitting and crocheting? Both are ways of looping together yarn together to form a fabric. And they essentially are the same. Knitting creates more “v” like loops while crocheting creates loops that are more like knots. </p>
+  <p class="body"> So, what is the difference between knitting and crocheting? Both are ways of looping together yarn together to form a fabric. And they essentially are the same. Knitting creates more “v” like loops while crocheting creates loops that are more like knots. </p>
 
-  <img src="crochetinghooks.jpg" alt="Three crocheting hooks lay one in front of the other, each a different color, but all about the same size. You only see the top half of the hooks, not the whole tool." />
+  <img class="history" src="crochetinghooks.jpg" alt="Three crocheting hooks lay one in front of the other, each a different color, but all about the same size. You only see the top half of the hooks, not the whole tool." />
 
-  <p> As for which is better, that is up to personal preference. Crocheting is actually easier and faster then knitting. Since it only requires on tool it is a lot easier for people to pick up and cheaper to start. While knitting does take more time and costs more money because of the need for more tools, it can create more complicated designs.  </p>
+  <p class="body"> As for which is better, that is up to personal preference. Crocheting is actually easier and faster then knitting. Since it only requires on tool it is a lot easier for people to pick up and cheaper to start. While knitting does take more time and costs more money because of the need for more tools, it can create more complicated designs.  </p>
