--- a/project-ideas.html
+++ b/project-ideas.html
@@ -36,7 +36,7 @@
 </div>
 
   <h2> Project Ideas </h2>
-  <p>If looking for something more fun than knitting a small square, check out the patterns below. These are some of my favorites, and while being easy they are interesting enough to keep coming back to. If you aren’t sure where to start, take the quiz at the bottom of the page to find out.</p>
+  <p class="body">If looking for something more fun than knitting a small square, check out the patterns below. These are some of my favorites, and while being easy they are interesting enough to keep coming back to. If you aren’t sure where to start, take the quiz at the bottom of the page to find out.</p>
 
   <h2>Knitting Patterns</h2>
 
