--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     </ul>
   </nav>
 
-  <section>
     <h2> Learn to Knit! </h2>
-    <p class="body"> Learn the basics of knitting. As the pandemic continues on, why not learn how to make items for yourself and for your family? Here you'll learn about the materials and techniques needed to make impressive, yet simple knitted projects. <p/>
+    <div class="homeside">
+    <section id="intro">
+    <p class="intro-body"> Learn the basics of knitting. As the pandemic continues on, why not learn how to make items for yourself and for your family? Here you'll learn about the materials and techniques needed to make impressive, yet simple knitted projects. <p/>
+    <p class="intro-body"> Take our <a href="project-ideas.html">interactive quiz</a> to fin out which project you should do. Also stick around to learn about the history of knitting and how it differs from crocheting. <p/>
 
-    <p class="body"> Take our <a href="project-ideas.html">interactive quiz</a> to fin out which project you should do. Also stick around to learn about the history of knitting and how it differs from crocheting. <p/>
-  </section>
-
-  <img src="websitecoverphoto.jpg" alt="Eight stacked balls of yarn of multiple colors with a pair of knitting needles stuck in the center yarn ball." />
+    <img id="home-img" src="websitecoverphoto.jpg" alt="Eight stacked balls of yarn of multiple colors with a pair of knitting needles stuck in the center yarn ball." />
+    </section>
 
 
   <section class="popup">
@@ -46,3 +46,4 @@
     <p> We have four knitting patterns that a great for beginingers and fun for experienced knitters.</p>
 
   </section>
+  </div>
