--- a/project-ideas.html
+++ b/project-ideas.html
@@ -41,14 +41,14 @@
   <h2>Knitting Patterns</h2>
 
   <section class="knitpattern">
-    <div class="popup">
+    <div class="popup-pattern">
       <img src="scarf.JPG" alt="A hot pink knitted scarf." />
       <strong> Scarf </strong>
       <p> A scarf may seem like one of the simplest projects to make, and in one sense it is. However, a scarf is difficult in that you have to be consistent with your stiches the whole time, no dropped or split stiches (these we will look like holes or change the width of your scarf).</p>
       <p>A scarf is simple in that you don’t really need a pattern for it, however it is nice to have some guidance on how wide to make it. For my scarfs I like to cast on 35 stiches using medium yarn and knitting with size 8 needles. Remember, the size of your needles will impact how large your stiches are, and change the width of the project. You can use smaller needles for a tighter stich, just make sure to knit a swatch to see how many stiches you will need to get your desired width. </p>
       <p>A basic scarf is easy in that you only need to use one stich the whole time: the knit stich. Knit the scarf to the desired length and then cast-off.</p>
     </div>
-    <div class="popup">
+    <div class="popup-pattern">
       <img src="hat.JPG" alt="A green knitted hat." />
       <strong> Hat </strong>
       <p> I flat knit hat is almost as easy to make as a basic scarf. You will knit a rectangle, sew-up the side with the yarn needle, and then use the needle to gather the top.</p>
@@ -56,7 +56,7 @@
       <p>Thread the yarn needle and stich up the side of the piece. Make sure to loop through the bottom of one stich and over the top of the stich on the other side of the piece to blend in to the stiches.</p>
       <p>Once you have sewn up the entire hat, thread the needle through the long tail at the top of the piece. Then synch together the top. I gather the top by stitching in the circle directly in the middle, creating two circles with one stich separating them. Then bring in the furthers section of those circles and slowly gather the top like that. </p>
     </div>
-    <div class="popup">
+    <div class="popup-pattern">
       <img src="slippers.JPG" alt="Two pairs of knitted slippers. One on the left brown and one on the right pink." />
       <strong> Slippers </strong>
       <p> This pattern, from favecrafs, is slightly more complicated in that you will combine stiches and sewing up a piece.</p>
@@ -69,7 +69,7 @@
       <p>After that, fold the heel in half along the seam you casted on. Stitch this side. The ridges that you created along the heel should be on the outside of the shoe.</p>
       <p>Now do all of this again to cover the other foot!</p>
     </div>
-    <div class="popup">
+    <div class="popup-pattern">
       <img src="cowl.JPG" alt="A multicolored knitted infinity scarf, or cowl." />
       <strong> Cowl </strong>
       <p> This last pattern will serve as a great introduction to working with circular needled.</p>
