--- a/project-ideas.html
+++ b/project-ideas.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Mukta:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="main.js" defer></script>
 
 
 </head>
@@ -81,41 +82,5 @@
     </div>
   </section>
 
-  <h2>Quiz: What project should you do?</h2>
-  <ul class="quiz">
-    <li class="question">Question 1</li>
-      <ul class="answers">
-        <li class="select">Answer 1</li>
-        <li class="select">Answer 2</li>
-        <li  class="select">Answer 3</li>
-        <li class="select">Answer 4</li>
-      </ul>
-    <li class="question">Question 2</li>
-        <ul class="answers">
-          <li class="select">Answer 1</li>
-          <li class="select">Answer 2</li>
-          <li class="select">Answer 3</li>
-          <li class="select">Answer 4</li>
-        </ul>
-    <li class="question">Question 3</li>
-          <ul class="answers">
-            <li class="select">Answer 1</li>
-            <li class="select">Answer 2</li>
-            <li class="select">Answer 3</li>
-            <li class="select">Answer 4</li>
-          </ul>
-    <li class="question">Question 4</li>
-          <ul class="answers">
-            <li class="select">Answer 1</li>
-            <li class="select">Answer 2</li>
-            <li class="select">Answer 3</li>
-            <li class="select">Answer 4</li>
-          </ul>
-    <li class="question">Question 5</li>
-          <ul class="answers">
-              <li class="select">Answer 1</li>
-              <li class="select">Answer 2</li>
-              <li class="select">Answer 3</li>
-              <li class="select">Answer 4</li>
-          </ul>
-  </ul>
+</body>
+</html>
